# miniChemistry

./: .gitignore  README.md  build.sh  pyproject.toml  setup.py
EXAMPLES/_Code/: Ex1_Find_product_mass.py  Ex2_Excess_and_limiting_reagent.py
docs/: conf.py  index.rst  make_pdf.py  miniChemistry.Core.Database.rst  miniChemistry.Core.ReactionMechanisms.rst  miniChemistry.Utilities.rst  miniChemistry.rst  modules.rst  user_guide.md
docs/_build/doctrees/: environment.pickle  index.doctree  miniChemistry.Computations.ComputationExceptions.doctree  miniChemistry.Computations.doctree  miniChemistry.Core.CoreExceptions.doctree  miniChemistry.Core.Database.doctree  miniChemistry.Core.ReactionMechanisms.doctree  miniChemistry.Core.Tools.doctree  miniChemistry.Core.doctree  miniChemistry.Utilities.doctree  miniChemistry.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  miniChemistry.Computations.ComputationExceptions.html  miniChemistry.Computations.html  miniChemistry.Core.CoreExceptions.html  miniChemistry.Core.Database.html  miniChemistry.Core.ReactionMechanisms.html  miniChemistry.Core.Tools.html  miniChemistry.Core.html  miniChemistry.Utilities.html  miniChemistry.html  modules.html  (+4 more)
miniChemistry/: MiniChemistryException.py  cli.py
miniChemistry/Computations/: Datum.py  IterativeCalculator.py  NewReactionCalculator.py  QuantityCalculator.py  ReactionCalculator.py  SSDatum.py
miniChemistry/Core/: Reaction.py  Substances.py
miniChemistry/EXAMPLES/: __init__.py
miniChemistry/Utilities/: Checks.py  File.py  UtilityExceptions.py
(+40 files in other folders)
